# brownie

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/rpi/: cli.py
src/rpi/entities/: web.py
src/rpi/repositories/: http_quantum.py  sys_printing.py
src/rpi/services/: printing_process.py  workers.py
src/rpi/settings/: __init__.py  __init__.pyi  _dev.py  _prod.py
virtual-printer/: Dockerfile  docker-compose.yaml
